[tool.poetry]
name = "kittens"
version = "4.0.0"
description = ""
authors = ["rychanya <rychanya@gmail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-dotenv = "^0.19.2"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
black = "^22.1.0"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "wrong-import-order"

[tool.pytest.ini_options]
addopts = "--cov=kittens --cov-report html"